# chapter2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Pipfile  README.md  daemonize  declarations.py  discord_improved.py  discord_interface.py  main.py  pyproject.toml  repl.py  rewrite-daemons  setup  upd  updep  updrb
.fleet/: run.json
.github/workflows/: run-multiprong.yml
.run/: main.run.xml
.windsurf/rules/: code-is-a-liability.md
chapter2/: abstractinterface.py  chr_loader.py  declarations.py  generate_response.py  instrument.py  load.py  loom.py  main.py  message_formats.py  mufflers.py  ontology.py  resolve_config.py  retriever.py  test_retriever.py  trace.py
chapter2/faculties/: __init__.py  character_faculty.py  episodic_memory_faculty.py  exa_search_faculty.py  history_faculty.py  sim_faculty.py  test_exa_search_faculty.py
chapter2/faculties/contrib/: airtable_notes_faculty.py
chapter2/interfaces/: __init__.py  chatcompletions_interface.py  completions_interface.py  deserves_reply.py  discord_interface.py  infra_interface.py  mikoto_interface.py  rpc_interface.py
chapter2/interfaces/addons/: discord_generate_avatar.py
chapter2/util/: app_info.py  asyncutil.py  discord_improved.py  uvicorn_improved.py
doc/: README.md  architecture.md  development.md  guidelines.md  principles.md
doc/explanations/: guidelines.md
doc/guides/: data-formatting.md  new-bot.md  new-discord-bot.md
doc/howto/: new-discord-bot.md  setup.md  telemetry.md
doc/howto/contrib/: README.md
doc/reference/: mufflers.md
doc/todo/: optimizations.md
doc/tutorials/contrib/: README.md  quantization.md
ems/: config.example.yaml
ems/arago/: .gitignore  config.yaml
ems/arago/arago.chr/: arago_autobiography.txt
ems/multiprong/: config.yaml
ems/multiprong/multiprong.chr/: test.txt
ems/simspode/: config.yaml
ems/simspode/simspode.chr/: 2022-09-30-a-new-new-era.txt  2022-10-01-possible-multiverses.txt  2022-10-02-the-skyrim-diophantine-equation.txt  2022-10-08-dreams-of-compression.txt  2022-10-11-racing-moloch.txt  2022-12-15-souls-in-the-datastream.txt  2022-12-25-the-slumbering-gods.txt  2023-01-31-we-can't-save-the-universe.txt  2023-04-22-the-springtime-of-mind.txt  2023-08-22-welcome-to-the-dreamtime.txt  simspode.txt
people/sercy/: config.yaml
src/: abstractinterface.py  character_faculty.py  chatcompletions_interface.py  chr_loader.py  completions_interface.py  declarations.py  discord_improved.py  discord_interface.py  main.py  message_formats.py  metaphor_search_faculty.py  mufflers.py  obtain_context.py  resolve_config.py  retriever.py  test_message_formats.py  test_retriever.py
src/faculties/: __init__.py  character_faculty.py  exa_search_faculty.py  metaphor_search_faculty.py  test_metaphor_search_faculty.py
src/interfaces/: __init__.py  chatcompletions_interface.py  completions_interface.py  discord_interface.py  mikoto_interface.py
src/interfaces/addons/: discord_generate_avatar.py
src/util/: asyncit.py  discord_improved.py
tools/: corecomplexity  dce_import.py  dce_importer.py  dce_starboard_import.py  discord_message_links_export.py  programlength  repl.py
