[project]
name = "chapter2"
version = "0.1.0"
license = "Artistic-2.0"
dependencies = [
    "embedapi @ git+https://github.com/ampdot-io/embedapi",
    "intermodel @ git+https://github.com/ampdot-io/intermodel",
    "axiom-py>=0.4.0",
    "aiohttp-socks>=0.8.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-discordpy>=0.1.9",
    "discord.py",
    "openai",
    "tiktoken>=0.7.0,<1.0",
    "more-itertools",
    "aioitertools",
    "nltk",
    "pyyaml",
    "pydantic>=2.0a1",
    "streamlit>=1.24.0,<2.0",
    "scikit-learn>=1.2.2,<2.0",
    "fire~=0.5.0",
    "rich~=13.5.1",
    "faiss-cpu>=1.7.4,<2.0",
    "asgiref>=3.7.2,<4.0",
    "python-dateutil>=2.8.2,<3.0",
    "pytest-asyncio~=0.21.1",
    "asyncstdlib~=3.10.9,<4.0",
    "fastapi[all]~=0.104.1",
    "arrow>=1.3.0,<2.0",
    "httpx~=0.25.2",
    "aiohttp[speedups]>=3.11.8",
    "mikoto-py~=0.0.6",
    "exa-py>=1.4.0",
    "novelai-api>=0.30.0",
    "matrix-nio>=0.25.0",
    "sortedcontainers",
    "pyairtable>=2.3.3",
    "jsonrpc-websocket>=3.1.5",
    "discord-py==2.5.2",
    "imgui-bundle>=1.6.2",
]

[tool.rye]
dev-dependencies = [
    "black>=24.8.0",
    "pre-commit>=3.8.0",
]
universal = true

[tool.rye.scripts]
em = "python3 -u ./chapter2/main.py"
dce_import = "./tools/dce_import.py"
dce_starboard_import = "./tools/dce_starboard_import.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["chapter2"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:faiss.*",
    "ignore::DeprecationWarning:distutils.*"
]
asyncio_mode = "auto"
